commit after first commit

--- a/index.html
+++ b/index.html
@@ -7,16 +7,24 @@
     <title>ПИВО ПО ЧЕТВЕРГАМ | THURSDAY BEER</title>
     <meta name="description" content="ПИВО ПО ЧЕТВЕРГАМ | THURSDAY BEER">
 
-    <link rel="stylesheet" href="/s/style/thursdaybeer.ru.css">
+    <!--<link rel="stylesheet" href="/s/style/thursdaybeer.ru.css">-->
 
     <!--[if lt IE 9]>
     <script src="/s/js/html5shiv.js"></script>
     <![endif]-->
+
+    <style>
+        body, html{height:100%}
+    </style>
 </head>
 
 <body>
 
-<img src="/s/i/thursdaybeer.ru.png" alt="ПИВО ПО ЧЕТВЕРГАМ | THURSDAY BEER" align="center"/>
+<table style="width: 100%; height: 86%">
+    <tr>
+        <td align="center" valign="middle"><img src="/s/i/thursdaybeer.ru.png" alt="ПИВО ПО ЧЕТВЕРГАМ | THURSDAY BEER" /></td>
+    </tr>
+</table>
 
 </body>
 </html>
